syntax = "proto3";

package profile;

service ProfileDosen {
    rpc GetProfile (Account) returns (BaseResponse);
    rpc UpdateProfile (UpdateProfileRequest) returns (BaseResponse);
    rpc GetJadwalDosen (JadwalDosenRequest) returns (JadwalDosenResponse);
    rpc GetJadwalDosenDaily (JadwalDosenRequest) returns (JadwalDosenResponse);
}


message ProfileDosenResponse {
    string nidn = 1;
    string nama = 2;
    string programStudi =3 ;
    string jenjangPendidikan = 4;
    string jenisKelamin = 5;
    string tanggalLahir = 6;
    string jabatanAkademik = 7 ;
    string noTelephone = 8;
    string alamatSurel = 9;
    bool isAlreadyPresensi = 10;
    string statusThridarma = 11;
    string statusKerajinan = 12;
}

message Account {
    string uuid= 1;
    string username= 2;
    string password= 3;
    string token= 4;
}

message ProfileDosenRequest {
    string nama = 1;
    string programStudi =2 ;
    string jenjangPendidikan = 3;
    string jenisKelamin = 4;
    string tanggalLahir = 5;
    string jabatanAkademik = 6 ;
    string noTelephone = 7;
    string alamatSurel = 8;
}

message JadwalDosen {
    string mataKuliah = 1;
    string hari = 2;
    string kelas = 3;
    string tahunAjaran =4;
    string semesterAktif = 5;
}

message JadwalDosenRequest {
    Account account = 1;
    int32 page = 2;
}

message JadwalDosenResponse {
    repeated JadwalDosen data = 1;
    optional PaginationData pagination = 2;
    int32 statusCode = 3;
    string message = 4;
}

message PaginationData {
    int32 page = 1;
    int32 size = 2;
    optional int32 total_page = 3;
    optional int32 total_data = 4;
}
message UpdateProfileRequest {
    Account account = 1;
    ProfileDosenRequest request = 2;
  }
message BaseResponse {
    optional ProfileDosenResponse data =1;
    int32 status_code = 2;
    string message = 3;
}